Simple login function is completed

--- a/IntelligentMonitor/Views/Account/Login.cshtml
+++ b/IntelligentMonitor/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="particles-js">
-        <div class="login">
+        <form id="login" onsubmit="return false" method="post" class="login">
             <div class="login-top">登录</div>
             <div class="login-center clearfix">
                 <div class="login-center-img"><img src="~/imgs/name.png" /></div>
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="login-button">登录</div>
-        </div>
+        </form>
         <div class="sk-rotating-plane"></div>
     </div>
     <script src="~/js/jquery-2.1.1.min.js"></script>
