--- a/IntelligentMonitor/Views/Home/Index.cshtml
+++ b/IntelligentMonitor/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
-﻿@{
-    ViewData["Title"] = "Index";
-}
-
-<h2>Index</h2>
-
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <title>智能监控系统</title>
+</head>
+<body>
+    <p>欢迎您：@User.Identity.Name !</p>
+</body>
+</html>
