--- a/IntelligentMonitor/Views/_ViewImports.cshtml
+++ b/IntelligentMonitor/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Authorization
 @using IntelligentMonitor
 @using IntelligentMonitor.Authorization
+@using IntelligentMonitor.Models.Users
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
