--- a/IntelligentMonitor/Views/Account/Users.cshtml
+++ b/IntelligentMonitor/Views/Account/Users.cshtml
@@ -33,10 +33,15 @@
             <div class="layui-card-body">
                 <table id="LAY-user-manage" lay-filter="LAY-user-manage"></table>
                 <script type="text/html" id="table-useradmin-webuser">
+                    {{#  if(@ViewData["Id"] == 10000){ }}
                     <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>编辑</a>
-                    {{#  if('管理员' == '@ViewData["Role"]'){ }}
                     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-delete"></i>删除</a>
                     {{#  } else { }}
+                    {{#  if(d.id == @ViewData["Id"]){ }}
+                    <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>编辑</a>
+                    {{#  } else { }}
+                    <a class="layui-btn layui-btn-normal layui-btn-disabled layui-btn-xs"><i class="layui-icon layui-icon-edit"></i>编辑</a>
+                    {{#  } }}
                     <a class="layui-btn layui-btn-danger layui-btn-disabled layui-btn-xs"><i class="layui-icon layui-icon-delete"></i>删除</a>
                     {{#  } }}
                 </script>
@@ -53,73 +58,23 @@
             var $ = layui.$
                 , form = layui.form
                 , table = layui.table;
-
             form.on('submit(LAY-user-front-search)', function (data) {
                 var field = data.field;
                 table.reload('LAY-user-manage', {
                     where: field
                 });
             });
-
-            //事件
             var active = {
-                batchdel: function () {
-                    var checkStatus = table.checkStatus('LAY-user-manage')
-                        , checkData = checkStatus.data; //得到选中的数据
-
-                    if (checkData.length === 0) {
-                        return layer.msg('请选择数据');
-                    }
-
-                    layer.prompt({
-                        formType: 1
-                        , title: '敏感操作，请验证口令'
-                    }, function (value, index) {
-                        layer.close(index);
-
-                        layer.confirm('确定删除吗？', function (index) {
-
-                            //执行 Ajax 后重载
-                            /*
-                            admin.req({
-                              url: 'xxx'
-                              //,……
-                            });
-                            */
-                            table.reload('LAY-user-manage');
-                            layer.msg('已删除');
-                        });
-                    });
-                }
-                , add: function () {
+                add: function () {
                     layer.open({
                         type: 2
                         , title: '添加用户'
                         , content: 'userform.html'
                         , maxmin: true
                         , area: ['500px', '450px']
-                        , btn: ['确定', '取消']
-                        , yes: function (index, layero) {
-                            var iframeWindow = window['layui-layer-iframe' + index]
-                                , submitID = 'LAY-user-front-submit'
-                                , submit = layero.find('iframe').contents().find('#' + submitID);
-
-                            //监听提交
-                            iframeWindow.layui.form.on('submit(' + submitID + ')', function (data) {
-                                var field = data.field; //获取提交的字段
-
-                                //提交 Ajax 成功后，静态更新表格中的数据
-                                //$.ajax({});
-                                table.reload('LAY-user-front-submit'); //数据刷新
-                                layer.close(index); //关闭弹层
-                            });
-
-                            submit.trigger('click');
-                        }
                     });
                 }
             };
-
             $('.layui-btn.layuiadmin-btn-useradmin').on('click', function () {
                 var type = $(this).data('type');
                 active[type] ? active[type].call(this) : '';
