admin adn user page

--- a/IntelligentMonitor/Views/Account/Users.cshtml
+++ b/IntelligentMonitor/Views/Account/Users.cshtml
@@ -69,9 +69,8 @@
                     layer.open({
                         type: 2
                         , title: '添加用户'
-                        , content: 'userform.html'
-                        , maxmin: true
-                        , area: ['500px', '450px']
+                        , content: '@Url.Action("AddUser","Account")'
+                        , area: ['420px', '350px']
                     });
                 }
             };
