admin and user page done.

--- a/IntelligentMonitor/Views/Account/Admins.cshtml
+++ b/IntelligentMonitor/Views/Account/Admins.cshtml
@@ -17,7 +17,7 @@
                     <div class="layui-inline">
                         <label class="layui-form-label">用户名</label>
                         <div class="layui-input-block">
-                            <input type="text" name="username" placeholder="请输入" autocomplete="off" class="layui-input">
+                            <input type="text" name="username" placeholder="按用户名搜索" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-inline">
@@ -35,13 +35,17 @@
                 <script type="text/html" id="table-useradmin-admin">
                     {{#  if(@ViewData["Id"] == 10000){ }}
                     <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>编辑</a>
-                    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-delete"></i>删除</a>
+                    {{#  if(d.id == 10000){ }}
+                    <a class="layui-btn layui-btn-danger layui-btn-disabled layui-btn-xs"><i class="layui-icon layui-icon-delete"></i>删除</a>
                     {{#  } else { }}
-                        {{#  if(d.id == @ViewData["Id"]){ }}
-                        <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>编辑</a>
-                        {{#  } else { }}
-                        <a class="layui-btn layui-btn-normal layui-btn-disabled layui-btn-xs"><i class="layui-icon layui-icon-edit"></i>编辑</a>
-                        {{#  } }}
+                    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-delete"></i>删除</a>
+                    {{#  } }}
+                    {{#  } else { }}
+                    {{#  if(d.id == @ViewData["Id"]){ }}
+                    <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>编辑</a>
+                    {{#  } else { }}
+                    <a class="layui-btn layui-btn-normal layui-btn-disabled layui-btn-xs"><i class="layui-icon layui-icon-edit"></i>编辑</a>
+                    {{#  } }}
                     <a class="layui-btn layui-btn-danger layui-btn-disabled layui-btn-xs"><i class="layui-icon layui-icon-delete"></i>删除</a>
                     {{#  } }}
                 </script>
@@ -60,6 +64,9 @@
                 , table = layui.table;
             form.on('submit(LAY-user-back-search)', function (data) {
                 var field = data.field;
+                if (field.username.length == 0) {
+                    return false;
+                }
                 table.reload('LAY-user-back-manage', {
                     where: field
                 });
