login optimize 、remove file

--- a/IntelligentMonitor/Views/Home/Back.cshtml
+++ b/IntelligentMonitor/Views/Home/Back.cshtml
@@ -137,7 +137,7 @@
             <div class="layadmin-body-shade" layadmin-event="shade"></div>
         </div>
     </div>
-    <script src="~/layuiadmin//layui/layui.js"></script>
+    <script src="~/layuiadmin/layui/layui.js"></script>
     <script>
         layui.config({
             base: '../layuiadmin/'
