--- a/IntelligentMonitor/Views/Account/Login.cshtml
+++ b/IntelligentMonitor/Views/Account/Login.cshtml
@@ -4,7 +4,6 @@
     <title>登录-智能监控系统</title>
     <link href="~/css/reset.css" rel="stylesheet" />
     <link href="~/css/style.css" rel="stylesheet" />
-    <link href="~/layuiadmin/layui/css/modules/layer/default/layer.css" rel="stylesheet" />
 </head>
 <body>
     <div id="particles-js">
@@ -30,7 +29,7 @@
     </div>
     <script src="~/js/jquery-2.1.1.min.js"></script>
     <script src="~/js/particles.min.js"></script>
+    <script src="~/layuiadmin/layui/layui.js"></script>
     <script src="~/js/login.js"></script>
-    <script src="~/layuiadmin/layui/lay/modules/layer.js"></script>
 </body>
 </html>
