--- a/IntelligentMonitor/Views/Home/Index.cshtml
+++ b/IntelligentMonitor/Views/Home/Index.cshtml
@@ -1,11 +1,17 @@
-﻿<!DOCTYPE html>
+﻿@inject IAuthorizationService AuthorizationService
+<!DOCTYPE html>
 <html>
 <head>
     <title>智能监控系统</title>
 </head>
 <body>
     <p>欢迎您：@User.Identity.Name !</p>
-    <a href="@Url.Action("Back", "Home")">进入后台</a>
+
+    @if ((await AuthorizationService.AuthorizeAsync(User, null, new PermissionAuthorizationRequirement(IntelligentMonitor.Authorization.Permissions.UserCreate))).Succeeded)
+    {
+        <a href="@Url.Action("Back", "Home")">进入后台</a>
+    }
+
     <a href="@Url.Action("Logout", "Account")">退出</a>
 </body>
 </html>
