--- a/IntelligentMonitor/Views/_ViewImports.cshtml
+++ b/IntelligentMonitor/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNetCore.Authorization
-@using IntelligentMonitor
+﻿@using IntelligentMonitor
 @using IntelligentMonitor.Authorization
+@using Microsoft.AspNetCore.Authorization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
