--- a/IntelligentMonitor/Views/Home/Index.cshtml
+++ b/IntelligentMonitor/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
-﻿@inject IAuthorizationService AuthorizationService
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>智能监控系统</title>
+    <title>联诺智能监控系统</title>
 </head>
 <body>
     <p>欢迎您：@User.Identity.Name !</p>
