--- a/IntelligentMonitor/Views/Account/Login.cshtml
+++ b/IntelligentMonitor/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>登录-智能监控系统</title>
+    <title>登录-联诺智能监控系统</title>
     <link href="~/css/reset.css" rel="stylesheet" />
     <link href="~/css/style.css" rel="stylesheet" />
 </head>
