--- a/IntelligentMonitor/Views/Home/Back.cshtml
+++ b/IntelligentMonitor/Views/Home/Back.cshtml
@@ -1,9 +1,8 @@
-﻿@inject IAuthorizationService AuthorizationService
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>后台-智能监控系统</title>
+    <title>后台-联诺智能监控系统</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -21,7 +20,7 @@
                         </a>
                     </li>
                     <li class="layui-nav-item layui-hide-xs" lay-unselect>
-                        <a href="@Url.Action("Index", "Home")" target="_blank" title="大屏展示">
+                        <a href="@Url.Action("Index", "Home")" target="_blank" title="首页预览">
                             <i class="layui-icon layui-icon-website"></i>
                         </a>
                     </li>
@@ -57,7 +56,7 @@
             <div class="layui-side layui-side-menu">
                 <div class="layui-side-scroll">
                     <div class="layui-logo" lay-href="@Url.Action("Index", "Home")">
-                        <span>智能监控系统</span>
+                        <span>联诺智能监控系统</span>
                     </div>
                     <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu" lay-filter="layadmin-system-side-menu">
                         <li data-name="home" class="layui-nav-item layui-nav-itemed">
@@ -67,7 +66,7 @@
                             </a>
                             <dl class="layui-nav-child">
                                 <dd data-name="console" class="layui-this">
-                                    <a lay-href="@Url.Action("Index", "Home")">大屏预览</a>
+                                    <a lay-href="@Url.Action("Index", "Home")">首页预览</a>
                                 </dd>
                             </dl>
                         </li>
