--- a/IntelligentMonitor/Views/_ViewImports.cshtml
+++ b/IntelligentMonitor/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using IntelligentMonitor
 @using IntelligentMonitor.Authorization
 @using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
