--- a/IntelligentMonitor/Views/Account/Roles.cshtml
+++ b/IntelligentMonitor/Views/Account/Roles.cshtml
@@ -10,50 +10,36 @@
     <link href="~/layuiadmin/style/admin.css" rel="stylesheet" />
 </head>
 <body>
-
     <div class="layui-fluid">
         <div class="layui-card">
-            <div class="layui-form layui-card-header layuiadmin-card-header-auto">
+            <div class="layui-form layui-card-header layuiadmin-card-header-auto layui-hide">
                 <div class="layui-form-item">
                     <div class="layui-inline">
-                        角色筛选
-                    </div>
-                    <div class="layui-inline">
-                        <select name="rolename" lay-filter="LAY-user-adminrole-type">
-                            <option value="-1">全部角色</option>
-                            <option value="0">管理员</option>
-                            <option value="1">超级管理员</option>
-                            <option value="2">纠错员</option>
-                            <option value="3">采购员</option>
-                            <option value="4">推销员</option>
-                            <option value="5">运营人员</option>
-                            <option value="6">编辑</option>
-                        </select>
+                        <button class="layui-btn layuiadmin-btn-admin" data-type="add">
+                            <i class="layui-icon layui-icon-add-1 layuiadmin-button-btn"></i>
+                            添加角色
+                        </button>
                     </div>
                 </div>
             </div>
             <div class="layui-card-body">
-                <div style="padding-bottom: 10px;">
-                    <button class="layui-btn layuiadmin-btn-role" data-type="batchdel">删除</button>
-                    <button class="layui-btn layuiadmin-btn-role" data-type="add">添加</button>
-                </div>
-
                 <table id="LAY-user-back-role" lay-filter="LAY-user-back-role"></table>
-                <script type="text/html" id="buttonTpl">
-                    {{#  if(d.check == true){ }}
-                    <button class="layui-btn layui-btn-xs">已审核</button>
-                    {{#  } else { }}
-                    <button class="layui-btn layui-btn-primary layui-btn-xs">未审核</button>
-                    {{#  } }}
+                <script type="text/html" id="permission">
+                    {{#  layui.each(d.permissionList, function(index, item){ }}
+                    <button class="layui-btn layui-btn-primary layui-btn-xs">{{ item.permissionDescribe }}</button>
+                    {{#  }); }}
                 </script>
                 <script type="text/html" id="table-useradmin-admin">
                     <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>编辑</a>
+                    {{#  if(d.id == 10000){ }}
+                    <a class="layui-btn layui-btn-danger layui-btn-disabled layui-btn-xs"><i class="layui-icon layui-icon-delete"></i>删除</a>
+                    {{#  } else { }}
                     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-delete"></i>删除</a>
+                    {{#  } }}
                 </script>
             </div>
         </div>
     </div>
-
     <script src="~/layuiadmin//layui/layui.js"></script>
     <script>
         layui.config({
@@ -64,40 +50,7 @@
             var $ = layui.$
                 , form = layui.form
                 , table = layui.table;
-
-            //搜索角色
-            form.on('select(LAY-user-adminrole-type)', function (data) {
-                //执行重载
-                table.reload('LAY-user-back-role', {
-                    where: {
-                        role: data.value
-                    }
-                });
-            });
-
-            //事件
             var active = {
-                batchdel: function () {
-                    var checkStatus = table.checkStatus('LAY-user-back-role')
-                        , checkData = checkStatus.data; //得到选中的数据
-
-                    if (checkData.length === 0) {
-                        return layer.msg('请选择数据');
-                    }
-
-                    layer.confirm('确定删除吗？', function (index) {
-
-                        //执行 Ajax 后重载
-                        /*
-                        admin.req({
-                          url: 'xxx'
-                          //,……
-                        });
-                        */
-                        table.reload('LAY-user-back-role');
-                        layer.msg('已删除');
-                    });
-                },
                 add: function () {
                     layer.open({
                         type: 2
