--- a/IntelligentMonitor/Views/Account/EditUser.cshtml
+++ b/IntelligentMonitor/Views/Account/EditUser.cshtml
@@ -41,7 +41,7 @@
                             }
                             else
                             {
-                                <option value="@role.Id" disabled="">@role.RoleName</option>
+                                <option value="@role.Id">@role.RoleName</option>
                             }
                         }
                     }
