--- a/IntelligentMonitor/Views/Account/Admins.cshtml
+++ b/IntelligentMonitor/Views/Account/Admins.cshtml
@@ -69,6 +69,9 @@
                 }
                 table.reload('LAY-user-back-manage', {
                     where: field
+                    , page: {
+                        curr: 1
+                    }
                 });
             });
             var active = {
