--- a/IntelligentMonitor/Views/Account/Users.cshtml
+++ b/IntelligentMonitor/Views/Account/Users.cshtml
@@ -86,6 +86,9 @@
                 }
                 table.reload('LAY-user-manage', {
                     where: field
+                    , page: {
+                        curr: 1
+                    }
                 });
             });
             var active = {
