--- a/IntelligentMonitor/Views/Account/Login.cshtml
+++ b/IntelligentMonitor/Views/Account/Login.cshtml
@@ -2,8 +2,7 @@
 <html>
 <head>
     <title>登录-联诺智能监控系统</title>
-    <link href="~/css/reset.css" rel="stylesheet" />
-    <link href="~/css/style.css" rel="stylesheet" />
+    <link href="~/css/login.css" rel="stylesheet" />
 </head>
 <body>
     <div id="particles-js">
